--- a/contracts/L2/Scarb.toml
+++ b/contracts/L2/Scarb.toml
@@ -7,10 +7,14 @@ edition = "2024_07"
 
 [dependencies]
 starknet = "2.9.2"
+openzeppelin_access = "0.20.0"
+openzeppelin_token = "0.20.0"
+openzeppelin_upgrades = "0.20.0"
 
 [dev-dependencies]
-snforge_std = "0.36.0"
 assert_macros = "2.9.2"
+openzeppelin_utils = "0.20.0"
+snforge_std = "0.36.0"
 
 [[target.starknet-contract]]
 sierra = true
