--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contracts/L1/lib/forge-std"]
 	path = contracts/L1/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "contracts/L1/lib/openzeppelin-contracts"]
+	path = contracts/L1/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
